Updated my product and products html

--- a/templates/my-product_detail.html
+++ b/templates/my-product_detail.html
@@ -161,15 +161,15 @@
             </div>
             <div class="col-12 col-lg-5">
                 <div class="single_product_desc">
-                    <div class="mb-15 d-flex align-items-end justify-content-between"> 
+                    <!-- <div class="mb-15 d-flex align-items-end justify-content-between"> 
                         <a href="{% url 'user_app:profile_view' %}" data-toggle="tooltip" data-placement="right" title="View User Profile">
                           <img src="{% static 'img/image1.jpg' %}" height="100" width="100" class="profile"/>
                         </a>
-                    </div> 
+                    </div>  -->
                     <!-- Product Meta Data -->
                     <div class="product-meta-data">
                         <div class="line"></div>
-                        <p class="product-price">Fatima Marie Montesclaros</p>
+                        <!-- <p class="product-price">Fatima Marie Montesclaros</p> -->
                         <div class="d-flex align-items-center justify-content-between">
                             <a href="product-details.html" class="product-desc">
                                 <h6>White Modern Chair</h6>
@@ -186,7 +186,7 @@
                                 <i class="fa fa-star" aria-hidden="true"></i>
                             </div>
                             <div class="review">
-                                <a href="#">Review</a>
+                                <a href="#">Reviews</a>
                             </div>
                         </div>
                         <!-- Avaiable -->
