--- a/templates/my-products.html
+++ b/templates/my-products.html
@@ -56,9 +56,9 @@
         </div>
 
         <!-- ##### Single Widget ##### -->
-        <div class="widget price mb-50">
+        <!-- <div class="widget price mb-50"> -->
             <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Price</h6>
+            <!-- <h6 class="widget-title mb-30">Price</h6>
 
             <div class="widget-desc">
                 <div class="slider-range">
@@ -70,7 +70,7 @@
                     <div class="range-price">10 - 1000 km</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div class="amado_product_area section-padding-25-0">
