--- a/templates/add_newuser.html
+++ b/templates/add_newuser.html
@@ -95,7 +95,7 @@
           <div class="col-md-7 col-lg-5">
             <div class="login-wrap p-5 mt-5 pb-4">
               <h3 class="text-center mb-4">Add New User</h3>
-              <form method="POST" action="{% url 'user_app:register_view' %}" class="signup-form">
+              <form method="POST" action="{% url 'user_app:add_new_user' %}" class="signup-form">
                 {% csrf_token %}
                 <div class="form-group mb-3">
                   <label class="label" for="username">Username</label>
