--- a/templates/admin_table.html
+++ b/templates/admin_table.html
@@ -59,6 +59,10 @@
     }
 }
 </style>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="table-container" >
@@ -66,6 +70,7 @@
             <table class="table">
                 <thead>
                     
+                    <th style="color: black;">ID</th>
                     <th style="color: black;">Username</th>
                     <th style="color: black;">Location</th>
                     <th style="color: black;">Email</th>
@@ -75,28 +80,148 @@
                     {% for user in users %}
 
                     <tr>
+                    <td data-label="ID">{{user.id}}</td>   
                     <td data-label="Username">{{user.username}}</td>
                     <td data-label="Message"></td>
                     <td data-label="Email">{{user.email}}</td>
-                    <td><a utton type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newModal-{{user.id}}">View</a>
+                    <td><a button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newModal-{{user.id}}">View</a>
 
-                        <a type="button" class="btn btn-primary" href="{% url 'user_app:edit_profile_view' %}">Edit</a>
+                        <a  type="button" class="btn btn-primary" data-toggle="modal" data-target="#EditModal-{{user.id}}">Edit</a>
 
-                         <button type="button" class="btn btn-primary" >Delete
-                         </button></td>
-                    <!--Modal-->
-                    <div class="modal fade" id="newModal-{{user.id}}" role="dialog">
+                         <a  type="button" class="btn btn-primary" data-toggle="modal" data-target="#DeleteModal-{{user.id}}">Delete</a></td>
+              
+                    <!-- The Modal View -->
+                      <div class="modal" id="newModal-{{user.id}}">
                         <div class="modal-dialog">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">User View</h4>
+                          <div class="modal-content">
+                          
+                            <!-- Modal Header -->
+                            <div class="modal-header" style="background-color:powderblue;">
+                              <h4 class="modal-title" >User Information</h4>
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                                <label >User Id:</label>
+                                 <div style="background-color:powderblue;">{{user.id}}</div><br>
+                                 <label>Username:</label>
+                                 <div style="background-color:powderblue;">{{user.username}}</div>
+                                 <br>
+                                  <div class = "row">
+                                    <div class = "col-sm-5">
+                                      <label>Firstname:</label>
+                                         <div style="background-color:powderblue;">{{user.first_name}}</div>
+                                     </div>
+                                    <div class = "col-sm-5">
+                                      <label>Lastname:</label>
+                                         <div style="background-color:powderblue;">{{user.last_name}}</div>
+                                     </div>
+                                  </div><br>
+                                  <label>Email Address:</label>
+                                 <div style="background-color:powderblue;">{{user.email}}</div>
+                                  <br>
+                                 <div class = "row">
+                                  <div class = "col-sm-10">
+                                        <label style="background-color:powderblue;">Address:</label>
+                                        <div>..</div>
+                                  </div>
+                                </div>
+                                <div class = "row">
+                                  <div class = "col-sm-6">
+                                      <label>Date Joined</label>
+                                         <div style="background-color:powderblue;">{{user.date_joined}}</div>
+                                  </div>
+                                </div>
+                                </div>
+                            
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            </div>
+                            
+                          </div>
                         </div>
-                        <div class="modal-body">
-                            <p>Test</p>
+                      </div>
+                      <!--End of View Modal-->
+                      <!-- The Modal Edit -->
+                      <div class="modal" id="EditModal-{{user.id}}">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                          
+                            <!-- Modal Header -->
+                            <div class="modal-header" style="background-color:powderblue;">
+                              <h4 class="modal-title" >User Information</h4>
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <!--Modal Body-->
+                            <form id="updateForm" method="post" >
+                            {% csrf_token %}
+                            <div class="modal-body">
+                                <label >User Id:</label>
+                                 <div style="background-color:powderblue;">{{user.id}}</div>
+                                <br>
+                                 <div >
+                                 <label>Username:</label>
+                                 <input style="background-color:powderblue;" type="text" name="username" value = {{user.username}} ></div><br>
+                                  <div class = "row">
+                                    <div class = "col-sm-5">
+                                      <label>Firstname</label>
+                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-firstname" name= "first-name" value={{user.first_name}}>
+                                     </div>
+                                    <div class = "col-sm-5">
+                                      <label>Lastname</label>
+                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-lastname" placeholder="Lastname" name = "last-name" value={{user.last_name}}>
+                                     </div>
+                                     <div>
+                                        <label>Email Address:</label>
+                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-add-brgy" placeholder="Address" name = "email-address" value={{user.email}}>
+                                     </div>
+
+                                  </div>
+                                  <br>
+                                 <div class = "row">
+                                 <!-- <div class = "col-sm-10">
+                                    <label>Address:</label>
+                                        <input style="background-color:powderblue;" type="text" class="form-control" id="id-add-brgy" placeholder="Address" name = "customer-address" value={{customer.address}}>
+                                  </div>-->
+                                </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-primary" type="submit" id = "btnUpdate" name = "btnUpdate" class="button">UPDATE</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
+                                </div>
+                                </form>
+                             </div>
+                         </div>
+                     </div>
+                     <!-- end of modal edit-->
+                     <!-- start of modal delete-->
+                     <div class="modal" id="DeleteModal-{{user.id}}">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                          
+                            <!-- Modal Header -->
+                            <div class="modal-header" style="background-color:powderblue;">
+                              <h4 class="modal-title" >User Information</h4>
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <!--Modal Body-->
+                        <form ction="{% url 'user_app:aadmin_table' %}" method="post" >
+                        {% csrf_token %} 
+                        <div class="modal-body">                       
+                          <input type="number" name="user-id" value = {{user.id}} hidden>
+                          Are you sure you want to delete this record?
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">NO</button>
+                          <button type="submit" id = "btnDelete" name = "btnDelete" class="btn btn-primary">YES</button>
                         </div>
+                      </div>
+                    </form>
                     </div>
+                  </div>
+              </div>
 
                     {% endfor %}
 
