--- a/templates/admin_table.html
+++ b/templates/admin_table.html
@@ -145,72 +145,67 @@
                       </div>
                       <!--End of View Modal-->
                       <!-- The Modal Edit -->
-                      <div class="modal" id="EditModal-{{user.id}}">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                          
-                            <!-- Modal Header -->
-                            <div class="modal-header" style="background-color:powderblue;">
-                              <h4 class="modal-title" >User Information</h4>
-                              <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            </div>
-                            <!--Modal Body-->
-                            <form id="updateForm" method="post" >
-                            {% csrf_token %}
-                            <div class="modal-body">
-                                <label >User Id:</label>
-                                 <div style="background-color:powderblue;">{{user.id}}</div>
-                                <br>
-                                 <div >
-                                 <label>Username:</label>
-                                 <input style="background-color:powderblue;" type="text" name="username" value = {{user.username}} ></div><br>
-                                  <div class = "row">
-                                    <div class = "col-sm-5">
-                                      <label>Firstname</label>
-                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-firstname" name= "first-name" value={{user.first_name}}>
-                                     </div>
-                                    <div class = "col-sm-5">
-                                      <label>Lastname</label>
-                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-lastname" placeholder="Lastname" name = "last-name" value={{user.last_name}}>
-                                     </div>
-                                     <div>
-                                        <label>Email Address:</label>
-                                         <input style="background-color:powderblue;" type="text" class="form-control" id="id-add-brgy" placeholder="Address" name = "email-address" value={{user.email}}>
-                                     </div>
-
-                                  </div>
-                                  <br>
-                                 <div class = "row">
-                                 <!-- <div class = "col-sm-10">
-                                    <label>Address:</label>
-                                        <input style="background-color:powderblue;" type="text" class="form-control" id="id-add-brgy" placeholder="Address" name = "customer-address" value={{customer.address}}>
-                                  </div>-->
-                                </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <button class="btn btn-primary" type="submit" id = "btnUpdate" name = "btnUpdate" class="button">UPDATE</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-                                </div>
-                                </form>
-                             </div>
-                         </div>
+                      <div class="modal fade" id="EditModal-{{user.id}}" tabindex="-1" role="dialog" aria-labelledby="  EditModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header"style="background-color:powderblue;">
+                  <h5 class="modal-title" >CUSTOMER INFORMATION</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              <form id="updateForm" method="post" >
+              {% csrf_token %}
+                <div class="modal-body">
+                 <input type="number" name="user-id" value = {{user.id}} ><br>
+                 <label>UserName</label>
+                <input type="text" class="form-control" id="username" name= "username" for="username" value={{user.username}}>
+                  <div class = "row">
+                    <div class = "col-sm-5">
+                      <label>Firstname</label>
+                         <input type="text" class="form-control" id="firstname" name= "firstname" value={{user.first_name}}>
                      </div>
+                    <div class = "col-sm-5">
+                      <label>Lastname</label>
+                         <input type="text" class="form-control" id="lastname" placeholder="lastname" name = "lastname" value={{user.last_name}}>
+                     </div>
+                  </div>
+                 <div class = "row">
+                 <!-- <div class = "col-sm-10">
+                        <input type="text" class="form-control" id="id-add-brgy" placeholder="Address" name = "customer-address" value={{customer.address}}>
+                  </div>-->
+                </div>
+                <div class = "row">
+                  <div class = "col-sm-6">
+                      <label>Email Address</label>
+                         <input type="text" class="form-control" id="email" name = "email" value={{user.email}} >
+                  </div>
+                
+                </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" id = "btnUpdate" name = "btnUpdate" class="btn btn-primary">UPDATE</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
+                </div>
+              </form>
+             </div>
+        </div>
+      </div>
                      <!-- end of modal edit-->
                      <!-- start of modal delete-->
-                     <div class="modal" id="DeleteModal-{{user.id}}">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                          
-                            <!-- Modal Header -->
-                            <div class="modal-header" style="background-color:powderblue;">
-                              <h4 class="modal-title" >User Information</h4>
-                              <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            </div>
-                            <!--Modal Body-->
-                        <form ction="{% url 'user_app:aadmin_table' %}" method="post" >
+                     <div class="modal fade" id="DeleteModal-{{user.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="DeleteModalLabel">DELETE RECORD</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <form id="deleteForm" method="post" >
                         {% csrf_token %} 
                         <div class="modal-body">                       
-                          <input type="number" name="user-id" value = {{user.id}} hidden>
+                          <input type="text" name="user-id" value = {{user.id}}>
                           Are you sure you want to delete this record?
                         </div>
                         <div class="modal-footer">
@@ -221,7 +216,6 @@
                     </form>
                     </div>
                   </div>
-              </div>
 
                     {% endfor %}
 
