--- a/templates/my-product_detail.html
+++ b/templates/my-product_detail.html
@@ -3,8 +3,6 @@
 
 {% block content %}
 
-<!-- Bootstrap Font Icon CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <style>
     .profile {
         border-radius: 50%;
@@ -103,113 +101,180 @@
         margin-bottom: 10px;
     }
 </style>
-<!-- Product Details Area Start -->
-<div class="single-product-area clearfix">
-    <div class="container-fluid">
+    <!-- Bootstrap Font Icon CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+<body>
+    <!-- Product Details Area Start -->
+    <div class="single-product-area clearfix">
+        <div class="container-fluid">
 
-        <div class="row">
-            <div class="col-12">
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb mt-50">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Furniture</a></li>
-                        <li class="breadcrumb-item"><a href="#">Chairs</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">white modern chair</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12 col-lg-7">
-                <div class="single_product_thumb">
-                    <div id="product_details_slider" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(/static/img/pro-big-1.jpg);">
-                            </li>
-                            <li data-target="#product_details_slider" data-slide-to="1" style="background-image: url(/static/img/pro-big-2.jpg);">
-                            </li>
-                            <li data-target="#product_details_slider" data-slide-to="2" style="background-image: url(/static/img/pro-big-3.jpg);">
-                            </li>
-                            <li data-target="#product_details_slider" data-slide-to="3" style="background-image: url(/static/img/pro-big-4.jpg);">
-                            </li>
+            <div class="row">
+                <div class="col-12">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb mt-50">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item"><a href="#">Furniture</a></li>
+                            <li class="breadcrumb-item"><a href="#">Chairs</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">white modern chair</li>
                         </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <a class="gallery_img" href="{% static 'img/pro-big-1.jpg' %}">
-                                    <img class="d-block w-100" src="{% static 'img/pro-big-1.jpg' %}" alt="First slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a class="gallery_img" href="{% static 'img/pro-big-2.jpg' %}">
-                                    <img class="d-block w-100" src="{% static 'img/pro-big-2.jpg' %}" alt="Second slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a class="gallery_img" href="{% static 'img/pro-big-3.jpg' %}">
-                                    <img class="d-block w-100" src="{% static 'img/pro-big-3.jpg' %}" alt="Third slide">
-                                </a>
-                            </div>
-                            <div class="carousel-item">
-                                <a class="gallery_img" href="{% static 'img/pro-big-4.jpg' %}">
-                                    <img class="d-block w-100" src="{% static 'img/pro-big-4.jpg' %}" alt="Fourth slide">
-                                </a>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-lg-7">
+                    <div class="single_product_thumb">
+                        <div id="product_details_slider" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(/static/img/pro-big-1.jpg);">
+                                </li>
+                                <li data-target="#product_details_slider" data-slide-to="1" style="background-image: url(/static/img/pro-big-2.jpg);">
+                                </li>
+                                <li data-target="#product_details_slider" data-slide-to="2" style="background-image: url(/static/img/pro-big-3.jpg);">
+                                </li>
+                                <li data-target="#product_details_slider" data-slide-to="3" style="background-image: url(/static/img/pro-big-4.jpg);">
+                                </li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <a class="gallery_img" href="{% static 'img/pro-big-1.jpg' %}">
+                                        <img class="d-block w-100" src="{% static 'img/pro-big-1.jpg' %}" alt="First slide">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a class="gallery_img" href="{% static 'img/pro-big-2.jpg' %}">
+                                        <img class="d-block w-100" src="{% static 'img/pro-big-2.jpg' %}" alt="Second slide">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a class="gallery_img" href="{% static 'img/pro-big-3.jpg' %}">
+                                        <img class="d-block w-100" src="{% static 'img/pro-big-3.jpg' %}" alt="Third slide">
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <a class="gallery_img" href="{% static 'img/pro-big-4.jpg' %}">
+                                        <img class="d-block w-100" src="{% static 'img/pro-big-4.jpg' %}" alt="Fourth slide">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-lg-5">
-                <div class="single_product_desc">
-                    <!-- <div class="mb-15 d-flex align-items-end justify-content-between"> 
-                        <a href="{% url 'user_app:profile_view' %}" data-toggle="tooltip" data-placement="right" title="View User Profile">
-                          <img src="{% static 'img/image1.jpg' %}" height="100" width="100" class="profile"/>
-                        </a>
-                    </div>  -->
-                    <!-- Product Meta Data -->
-                    <div class="product-meta-data">
-                        <div class="line"></div>
-                        <!-- <p class="product-price">Fatima Marie Montesclaros</p> -->
-                        <div class="d-flex align-items-center justify-content-between">
-                            <a href="product-details.html" class="product-desc">
-                                <h6>White Modern Chair</h6>
+                <div class="col-12 col-lg-5">
+                    <div class="single_product_desc">
+                        <!-- <div class="mb-15 d-flex align-items-end justify-content-between"> 
+                            <a href="{% url 'user_app:profile_view' %}" data-toggle="tooltip" data-placement="right" title="View User Profile">
+                            <img src="{% static 'img/image1.jpg' %}" height="100" width="100" class="profile"/>
                             </a>
-                            <a href="{% url 'user_app:offer_view' %}" data-toggle="tooltip" data-placement="right" title="Offers"><i class="bi bi-tags-fill"></i></a>
-                        </div>
-                        <!-- Ratings & Review -->
-                        <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
-                            <div class="ratings">
-                                <i class="fa fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-star" aria-hidden="true"></i>
-                                <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>  -->
+                        <!-- Product Meta Data -->
+                        <div class="product-meta-data">
+                            <div class="line"></div>
+                            <!-- <p class="product-price">Fatima Marie Montesclaros</p> -->
+                            <div class="d-flex align-items-center justify-content-between">
+                                <a href="product-details.html" class="product-desc">
+                                    <h6>White Modern Chair</h6>
+                                </a>
+                                <a href="{% url 'user_app:offer_view' %}" data-toggle="tooltip" data-placement="right" title="Offers"><i class="bi bi-tags-fill"></i></a>
                             </div>
-                            <div class="review">
-                                <a href="#">Reviews</a>
+                            <!-- Ratings & Review -->
+                            <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
+                                <div class="ratings">
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </div>
+                                <div class="review">
+                                    <a href="#">Reviews</a>
+                                </div>
                             </div>
+                            <!-- Avaiable -->
+                            <p class="avaibility"><i class="fa fa-circle"></i> In Stock</p>
                         </div>
-                        <!-- Avaiable -->
-                        <p class="avaibility"><i class="fa fa-circle"></i> In Stock</p>
-                    </div>
 
-                    <div class="short_overview my-5">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quae eveniet culpa officia quidem mollitia impedit iste asperiores nisi reprehenderit consequatur, autem, nostrum pariatur enim?</p>
-                    </div>
+                        <div class="short_overview my-5">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quae eveniet culpa officia quidem mollitia impedit iste asperiores nisi reprehenderit consequatur, autem, nostrum pariatur enim?</p>
+                        </div>
 
-                    <!-- Add Product Form -->
-                    <form method="POST" action=""> <!--{'user_app:delete_product_view'}-->
+                        <!-- Add Product Form -->
+                        <!-- <form method="POST" action=""> {'user_app:delete_product_view'} -->
                         <div class="cart-btn d-flex mb-50">
                             <a href="{% url 'user_app:add_product_view' %}" class="btn amado-btn mb-15"><i class="bi bi-plus-circle-fill"></i>&nbsp;Add Product</a>
-                            <a href="{% url 'user_app:add_product_view' %}" class="edit-product-btn" data-toggle="tooltip" data-placement="right" title="Update"><i class="bi bi-pencil-square"></i></i></a>
+                            <a type="button" class="edit-product-btn" title="Update" data-toggle="modal" data-target="#EditModal-{{product.id}}"><i class="bi bi-pencil-square"></i></i></a> <!--data-toggle="tooltip" data-placement="right"-->
+                            <!--<button type="button" class="edit-product-btn" data-bs-toggle="modal" data-bs-target="#EditModal-{{product.id}}">
+                                <i class="bi bi-pencil-square"></i>
+                            </button>-->
                             <a type="submit" name="delete-btn" href="{% url 'user_app:add_product_view' %}" class="delete-product-btn" data-toggle="tooltip" data-placement="right" title="Delete"><i class="bi bi-trash-fill"></i></i></a>
                         </div>
-                    </form>
+                        <!-- </form> -->
+                        
+                        <!-- The Modal Edit -->
+                        <div class="modal fade" id="EditModal-{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="  EditModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header"style="background-color:powderblue;">
+                                    <h5 class="modal-title" >Product Details</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <form id="updateForm" method="POST" action="{% url 'user_app:add_product_view' %}" class="tm-edit-product-form" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="modal-body">
+                                <label>Product ID</label>
+                                <input type="number" name="product-id" value = {{product.id}} ><br>
+                                <div class="form-group mb-3">
+                                    <label for="name">Product Name</label>
+                                    <input id="name" name="product_name" type="text" class="form-control validate" value ={{product.product_name}} >
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="description">Description</label>
+                                    <textarea class="form-control validate" name="description" rows="3" value ={{product.description}}>{{product.description}}</textarea>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label for="category">Category</label>
+                                    <select class="custom-select tm-select-accounts" id="category" name="category" value ={{product.category}}>
+                                        <option disabled selected>{{product.category}}</option>
+                                        {% for category in categories %}
+                                        <option>{{category.name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <!-- <div class="tm-product-img-dummy mx-auto">
+                                    <i
+                                    class="fas fa-cloud-upload-alt tm-upload-icon"
+                                    onclick="document.getElementById('fileInput').click();"
+                                    ></i>
+                                </div> -->
+                                <div class="custom-file mt-3 mb-3">
+                                    <input name="images" id="fileInput" type="file" class="btn btn-primary btn-block mx-auto"
+                                    value ={{product.image}} /> <!--multiple-->
+                                </div>
+                                
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" id = "btnUpdate" name = "btnUpdate" class="btn btn-primary">UPDATE</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
+                                </div>
+                                </form>
+                            </div>
+                            </div>
+                        </div>
+                        <!-- end of modal edit-->
+
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Product Details Area End -->
-
+    <!-- Product Details Area End -->
+</body>
+</html>
 {% endblock content %}
